src/styles/post.scss
.blog-post-min-h {
  min-height: 12rem;
}

.blog-post {
  @apply text-lg;

  p.is-editor-empty:first-child::before {
    content: attr(data-placeholder);
    @apply pointer-events-none float-left h-0 text-white/50;
  }

  h1 {
    @apply mb-4 text-2xl line-through;
  }

  h2 {
    @apply mb-4 text-2xl line-through;
  }

  h3 {
    @apply mb-6 mt-8 text-3xl font-semibold;
  }

  h4 {
    @apply mb-4 mt-6 text-2xl;
  }

  p {
    @apply mb-2.5;
  }

  a {
    @apply font-normal text-white underline decoration-rose-800 underline-offset-4 transition-all hover:text-rose-600;
  }

  :not(pre) > code {
    @apply rounded border border-neutral-800 px-1 py-0.5 font-mono text-base text-white;
  }

  ul {
    @apply list-disc pl-5 marker:text-rose-800;

    li {
      @apply mb-0;

      p {
        @apply mb-0;
      }
    }
  }

  // Code editor

  > * + * {
    margin-top: 0.75em;
  }

  pre {
    @apply overflow-y-auto rounded-md border border-neutral-800 px-4 py-2;

    code {
      @apply font-mono text-base;
      color: #edeef0;
    }
  }

  .token.comment,
  .token.prolog,
  .token.doctype,
  .token.cdata {
    @apply text-neutral-200/60;
  }

  .token.atrule,
  .token.punctuation {
    color: #edeef0;
  }

  .namespace {
    opacity: 0.7;
  }

  .token.property,
  .token.class-name,
  .token.function {
    color: #70b8ff;
  }

  .token.selector,
  .token.tag,
  .token.boolean,
  .token.number,
  .token.constant,
  .token.symbol {
    color: #ff92ad;
  }

  .token.attr-name,
  .token.string,
  .token.char,
  .token.builtin,
  .token.regex,
  .token.important,
  .token.inserted {
    color: #0bd8b6;
  }

  .token.operator,
  .token.entity,
  .token.url,
  .language-css .token.string,
  .style .token.string,
  .token.variable {
    color: #ff92ad;
  }

  .token.attr-value,
  .token.keyword {
    color: #ff92ad;
  }

  .token.important,
  .token.bold {
    font-weight: bold;
  }

  .token.italic {
    font-style: italic;
  }

  .token.entity {
    cursor: help;
  }

  .token.deleted {
    color: red;
  }
}

